Fix overflow issue with show more on followed stories

--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -194,11 +194,7 @@
     &.full-post {
       max-height: none;
     }
-      
-    .follow-bubbles {
-      max-height: 480px;
-      overflow: auto;
-    }
+
   }
 
   .event-info {
